exports[`CallNoteDetail should exclude the activity icon if it does not exist 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Wed, Sep 28, 7:09 pm
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <ScrollView
    style={
      Object {
        "padding": 24,
      }
    }>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          DISCUSSION WITH ACTIVITY
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 18,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontSize": 18,
                  "paddingBottom": 12,
                  "paddingTop": 18,
                  "textAlign": "left",
                },
                Object {
                  "alignSelf": "center",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
              ],
            ]
          }>
          raaar
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR REFLECTIONS
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontSize": 18,
              "paddingBottom": 12,
              "paddingTop": 18,
              "textAlign": "left",
            },
          ]
        }>
        It went well
      </Text>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR MENTEE’S MOOD
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 18,
          }
        }>
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          OBJECTIVE ACHIEVED
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 18,
          }
        }>
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          HELPFULNESS OF ACTIVITY
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontSize": 18,
                "paddingBottom": 12,
                "paddingTop": 18,
                "textAlign": "left",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        } />
    </View>
  </ScrollView>
</View>
`;

exports[`CallNoteDetail should exclude the activity views if they are undefined 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Wed, Sep 28, 7:09 pm
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <ScrollView
    style={
      Object {
        "padding": 24,
      }
    }>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR REFLECTIONS
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontSize": 18,
              "paddingBottom": 12,
              "paddingTop": 18,
              "textAlign": "left",
            },
          ]
        }>
        It went well
      </Text>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR MENTEE’S MOOD
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 18,
          }
        }>
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          HELPFULNESS OF ACTIVITY
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontSize": 18,
                "paddingBottom": 12,
                "paddingTop": 18,
                "textAlign": "left",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        } />
    </View>
  </ScrollView>
</View>
`;

exports[`CallNoteDetail should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
        ]
      }>
      Wed, Sep 28, 7:09 pm
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <ScrollView
    style={
      Object {
        "padding": 24,
      }
    }>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          DISCUSSION WITH ACTIVITY
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginTop": 18,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontSize": 18,
                  "paddingBottom": 12,
                  "paddingTop": 18,
                  "textAlign": "left",
                },
                Object {
                  "alignSelf": "center",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
              ],
            ]
          }>
          raaar
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR REFLECTIONS
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "fontSize": 18,
              "paddingBottom": 12,
              "paddingTop": 18,
              "textAlign": "left",
            },
          ]
        }>
        It went well
      </Text>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          YOUR MENTEE’S MOOD
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 18,
          }
        }>
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          OBJECTIVE ACHIEVED
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 18,
          }
        }>
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 45,
        }
      }>
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "#dfe5e6",
            "borderStyle": "solid",
            "paddingBottom": 19,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#9fb1b3",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "textAlign": "left",
              },
            ]
          }>
          HELPFULNESS OF ACTIVITY
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "fontSize": 18,
                "paddingBottom": 12,
                "paddingTop": 18,
                "textAlign": "left",
              },
              Object {
                "textAlign": "center",
              },
            ],
          ]
        } />
    </View>
  </ScrollView>
</View>
`;
